==> zeruns/STM32F407_LVGL_Template_MSP3526/Core/Hardware/LCD.c <==
#include "LCD.h"
#define LCD_SPI &hspi1

void LCD_WR_REG(uint8_t data)
{
	while (HAL_SPI_GetState(LCD_SPI) != HAL_SPI_STATE_READY)
		;
	LCD_CS_CLR;
	LCD_RS_CLR;
	SPI_SwapByte(data);
	LCD_CS_SET;
}

void LCD_WR_DATA(uint8_t data)
{
	while (HAL_SPI_GetState(LCD_SPI) != HAL_SPI_STATE_READY)
		;
	LCD_CS_CLR;
	LCD_RS_SET;
	SPI_SwapByte(data);
	LCD_CS_SET;
}

uint8_t LCD_RD_DATA(void)
{
	uint8_t data;
	while (HAL_SPI_GetState(LCD_SPI) != HAL_SPI_STATE_READY)
		;
	LCD_CS_CLR;
	LCD_RS_SET;
	SPI1_SetSpeed(0);
	data = SPI_SwapByte(0xFF);
	SPI1_SetSpeed(1);
	LCD_CS_SET;
	return data;
}

uint16_t Lcd_ReadData_16Bit(void)
{
	uint16_t r, g;
	while (HAL_SPI_GetState(LCD_SPI) != HAL_SPI_STATE_READY)
		;
	LCD_CS_CLR;
	LCD_RS_CLR;
	SPI_SwapByte(lcddev.rramcmd);
	SPI1_SetSpeed(0);
	LCD_RS_SET;
	SPI_SwapByte(0xFF);
	r = SPI_SwapByte(0xFF);
	g = SPI_SwapByte(0xFF);
	SPI1_SetSpeed(1);
	LCD_CS_SET;
	r <<= 8;
	r |= g;
	return r;
}

void LCD_DrawPoint(uint16_t x, uint16_t y)
{
	LCD_SetCursor(x, y); // 设置光标位置
	Lcd_WriteData_16Bit(POINT_COLOR);
}

void LCDDrawPoint(uint16_t x, uint16_t y, uint16_t color)
{
	LCD_SetCursor(x, y); // 设置光标位置
	Lcd_WriteData_16Bit(color);
}

void LCD_Clear(uint16_t Color)
{
	unsigned int i, m;
	LCD_SetWindows(0, 0, lcddev.width - 1, lcddev.height - 1);
	uint8_t data[lcddev.width * 2];
	uint16_t n = 0;
	for (i = 0; i < lcddev.height; i++)
	{
		for (m = 0; m < lcddev.width; m++)
		{
			// Lcd_WriteData_16Bit(Color);
			data[n] = Color >> 8;
			data[n + 1] = (uint8_t)Color;
			n = n + 2;
		}
		Lcd_WriteData_DMA(data, lcddev.width * 2);
		n = 0;
	}
}

void LCD_Init(void)
{

	LCD_RESET(); // LCD 复位
	//*************3.5 ST7796S IPS初始化**********//
	LCD_WR_REG(0x11);

	HAL_Delay(80); // Delay 120ms

	LCD_WR_REG(0x36); // Memory Data Access Control MY,MX~~
	LCD_WR_DATA(0x48);

	LCD_WR_REG(0x3A);
	LCD_WR_DATA(0x55); // LCD_WR_DATA(0x66);

	LCD_WR_REG(0xF0); // Command Set Control
	LCD_WR_DATA(0xC3);

	LCD_WR_REG(0xF0);
	LCD_WR_DATA(0x96);

	LCD_WR_REG(0xB4);
	LCD_WR_DATA(0x01);

	LCD_WR_REG(0xB7);
	LCD_WR_DATA(0xC6);

	/*LCD_WR_REG(0xB9);
	LCD_WR_DATA(0x02);
	LCD_WR_DATA(0xE0);*/

	LCD_WR_REG(0xC0);
	LCD_WR_DATA(0x80);
	LCD_WR_DATA(0x45);

	LCD_WR_REG(0xC1);
	LCD_WR_DATA(0x13); // 18  //00

	LCD_WR_REG(0xC2);
	LCD_WR_DATA(0xA7);

	LCD_WR_REG(0xC5);
	LCD_WR_DATA(0x0A);

	LCD_WR_REG(0xE8);
	LCD_WR_DATA(0x40);
	LCD_WR_DATA(0x8A);
	LCD_WR_DATA(0x00);
	LCD_WR_DATA(0x00);
	LCD_WR_DATA(0x29);
	LCD_WR_DATA(0x19);
	LCD_WR_DATA(0xA5);
	LCD_WR_DATA(0x33);

	LCD_WR_REG(0xE0);
	LCD_WR_DATA(0xD0);
	LCD_WR_DATA(0x08);
	LCD_WR_DATA(0x0F);
	LCD_WR_DATA(0x06);
	LCD_WR_DATA(0x06);
	LCD_WR_DATA(0x33);
	LCD_WR_DATA(0x30);
	LCD_WR_DATA(0x33);
	LCD_WR_DATA(0x47);
	LCD_WR_DATA(0x17);
	LCD_WR_DATA(0x13);
	LCD_WR_DATA(0x13);
	LCD_WR_DATA(0x2B);
	LCD_WR_DATA(0x31);

	LCD_WR_REG(0xE1);
	LCD_WR_DATA(0xD0);
	LCD_WR_DATA(0x0A);
	LCD_WR_DATA(0x11);
	LCD_WR_DATA(0x0B);
	LCD_WR_DATA(0x09);
	LCD_WR_DATA(0x07);
	LCD_WR_DATA(0x2F);
	LCD_WR_DATA(0x33);
	LCD_WR_DATA(0x47);
	LCD_WR_DATA(0x38);
	LCD_WR_DATA(0x15);
	LCD_WR_DATA(0x16);
	LCD_WR_DATA(0x2C);
	LCD_WR_DATA(0x32);

	LCD_WR_REG(0xF0);
	LCD_WR_DATA(0x3C);

	LCD_WR_REG(0xF0);
	LCD_WR_DATA(0x69);

	HAL_Delay(80);

	LCD_WR_REG(0x21);

	LCD_WR_REG(0x29);

	LCD_direction(USE_HORIZONTAL); // 设置LCD显示方向
	LCD_Clear(WHITE);			   // 清全屏白色
}
